Fix anchor jump to

--- a/stubbornjava-webapp/ui/src/common/common.scss
+++ b/stubbornjava-webapp/ui/src/common/common.scss
@@ -71,6 +71,23 @@ h6 {
   }
 }
 
+.anchored-md {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    &:before {
+      display: block;
+      content: " ";
+      margin-top: -70px;
+      height: 70px;
+      visibility: hidden;
+    }
+  }
+}
+
 .inline-block {
   display: inline-block;
 }
